crates/tlang_codegen_js/tests/snapshots/hir_js_pass__complex_nested_function_calls.snap
---
source: crates/tlang_codegen_js/tests/hir_js_pass.rs
expression: pretty_print(&hir)
---
fn main() -> unknown {
    __TEMP_VAR_BLOCK__("$tmp$0", {
        __TEMP_VAR_BLOCK__("$tmp$1", {
            let x: unknown = 1;
            ($tmp$1 = (x + 1));
        });
        let a: unknown = $tmp$1;
        __TEMP_VAR_BLOCK__("$tmp$2", {
            let y: unknown = 2;
            ($tmp$2 = (y * 2));
        });
        let b: unknown = $tmp$2;
        ($tmp$0 = (a + b));
    });
    println($tmp$0);
}
