crates/tlang_codegen_js/tests/snapshots/hir_js_pass__dict_expression_flattening.snap
---
source: crates/tlang_codegen_js/tests/hir_js_pass.rs
expression: pretty_print(&hir)
---
fn main() -> unknown {
    __TEMP_VAR_BLOCK__("$tmp$0", {
        let a: unknown = 1;
        ($tmp$0 = (a + 1));
    });
    __TEMP_VAR_BLOCK__("$tmp$1", {
        let b: unknown = "key";
        ($tmp$1 = (b + "2"));
    });
    __TEMP_VAR_BLOCK__("$tmp$2", {
        let c: unknown = 2;
        ($tmp$2 = (c * 2));
    });
    let x: unknown = [$tmp$0, $tmp$1, $tmp$2];
    x
}
