crates/tlang_codegen_js/tests/snapshots/hir_js_pass__field_access_flattening.snap
---
source: crates/tlang_codegen_js/tests/hir_js_pass.rs
expression: pretty_print(&hir)
---
fn main() -> unknown {
    __TEMP_VAR_BLOCK__("$tmp$0", {
        let obj: unknown = {field: 42};
        ($tmp$0 = obj);
    });
    let x: unknown = $tmp$0.field;
    x
}
