crates/tlang_codegen_js/tests/snapshots/hir_js_pass__mixed_simple_and_complex_expressions.snap
---
source: crates/tlang_codegen_js/tests/hir_js_pass.rs
expression: pretty_print(&hir)
---
fn main() -> unknown {
    let simple: unknown = (1 + 2);
    __TEMP_VAR_BLOCK__("$tmp$0", {
        let inner: unknown = (simple * 2);
        ($tmp$0 = (inner + 1));
    });
    let complex: unknown = $tmp$0;
    (simple + complex)
}
